Fix reemplazo toList con collect